# Support-escalation-Agent

./: .env.example  .gitignore  DESIGN.md  README.md  pyproject.toml  run.py
data/: account_faq.json  billing_faq.json  technical_faq.json
scripts/: seed_knowledge_base.py  update_main.py
src/agents/: __init__.py  support_agent.py
src/agents/specialists/: __init__.py  account_agent.py  base.py  billing_agent.py  router.py  technical_agent.py
src/api/: main.py
src/knowledge/: __init__.py  ingestion.py  vector_store.py
src/models/: __init__.py  database.py  ticket.py
src/services/: __init__.py  confidence_scorer.py  intent_classifier.py
tests/: test_api.py  test_confidence.py
